--- a/app/src/main/res/layout/marker_view.xml
+++ b/app/src/main/res/layout/marker_view.xml
@@ -16,8 +16,8 @@
         android:layout_marginLeft="5dp"
         android:layout_marginRight="5dp"
         android:text=""
-        android:textSize="10dp"
-        android:textColor="@color/dark_grey"
+        android:textSize="8sp"
+        android:textColor="@color/dark_purple"
         android:ellipsize="end"
         android:textAppearance="?android:attr/textAppearanceSmall" />
 
