--- a/app/src/main/res/layout/activity_onboarding.xml
+++ b/app/src/main/res/layout/activity_onboarding.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent"
     tools:context=".ui.onboarding.OnboardingActivity"
     android:theme="@style/Theme.Testing"
-    android:background="@color/dark_purple">
+    android:background="@color/white">
 
     <!-- For fragment container -->
     <FrameLayout
