--- a/app/src/main/res/layout/sleep_data_card.xml
+++ b/app/src/main/res/layout/sleep_data_card.xml
@@ -21,33 +21,6 @@
         android:padding="20dp">
 
         <TextView
-            android:id="@+id/FitbitLoginPrompt"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:textColor="@color/light_grey"
-            android:layout_marginStart="90dp"
-            android:layout_marginEnd="91dp"
-            android:layout_marginVertical="20dp"
-            android:paddingVertical="15dp"
-            android:text="@string/to_view_your_sleep_data_you_need_to_log_in_to_your_fitbit_account"
-            android:textAlignment="center"
-            android:textSize="18sp"
-            android:gravity="center"
-            android:visibility="gone"/>
-
-        <Button
-            android:id="@+id/FitbitBtn"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center_horizontal"
-            android:background="@drawable/roundstyle"
-            android:backgroundTint="#C2B6DF"
-            android:padding="10dp"
-            android:text="@string/fitbit_login"
-            android:textColor="@color/white"
-            android:visibility="gone"/>
-
-        <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:fontFamily="@font/roboto_black"
@@ -56,6 +29,59 @@
             android:textColor="@color/white"
             android:textSize="20sp"
             android:id="@+id/hideThis"/>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="vertical"
+            android:id="@+id/FitbitLoginVisible"
+            android:visibility="gone">
+
+            <TextView
+                android:id="@+id/FitbitLoginPrompt"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textColor="@color/light_grey"
+                android:layout_marginStart="90dp"
+                android:layout_marginEnd="91dp"
+                android:layout_marginVertical="20dp"
+                android:paddingVertical="15dp"
+                android:text="@string/to_view_your_sleep_data_you_need_to_log_in_to_your_fitbit_account"
+                android:textAlignment="center"
+                android:textSize="18sp"
+                android:gravity="center" />
+
+            <Button
+                android:id="@+id/FitbitBtn"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_horizontal"
+                android:background="@drawable/roundstyle"
+                android:backgroundTint="#C2B6DF"
+                android:padding="10dp"
+                android:text="@string/fitbit_login"
+                android:textColor="@color/white" />
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="vertical"
+            android:id="@+id/sleepDataNotFound"
+            android:visibility="gone">
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textColor="@color/light_grey"
+                android:padding="20dp"
+                android:text="@string/home_sleep_data_not_found_content"
+                android:textAlignment="center"
+                android:textSize="20sp"
+                android:gravity="center" />
+
+        </LinearLayout>
+
 
     <TableLayout
         android:id="@+id/sleepData"
