--- a/app/src/main/res/drawable/roundstyle.xml
+++ b/app/src/main/res/drawable/roundstyle.xml
@@ -1,14 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
-    <!--<gradient
-        android:centerY="0.2"
-        android:startColor="#FFBDBDBD"
-        android:centerColor="#65FFFFFF"
-        android:endColor="#00FFFFFF"
-        android:angle="270"
-        />-->
-    <stroke android:width="2dp" android:color="@color/dark_grey" />
+    <solid android:color="@color/white" />
+    <stroke android:width="2dp" android:color="@color/light_purple" />
     <corners
         android:radius="20dp"/>
 
