--- a/app/src/main/res/layout/fragment_consent.xml
+++ b/app/src/main/res/layout/fragment_consent.xml
@@ -4,7 +4,7 @@
     android:layout_height="match_parent"
     xmlns:tools="http://schemas.android.com/tools"
     android:orientation="horizontal"
-    android:background="@color/dark_purple"
+    android:background="@color/white"
     tools:context="ui.onboarding.ConsentFragment">
 
     <ScrollView
@@ -35,7 +35,8 @@
                 android:layout_height="wrap_content"
                 android:autoLink="web"
                 android:padding="5sp"
-                android:textColor="@color/white"
+                android:layout_marginTop="8dp"
+                android:textColor="@color/dark_purple"
                 android:text="@string/con_intro" />
 
             <LinearLayout
@@ -78,7 +79,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginTop="5sp"
                 android:padding="5sp"
-                android:textColor="@color/white"
+                android:textColor="@color/light_purple"
                 android:text="@string/con_contact" />
 
             <TextView
@@ -86,7 +87,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginTop="5sp"
                 android:padding="5sp"
-                android:textColor="@color/white"
+                android:textColor="@color/dark_purple"
                 android:text="@string/con_data" />
             <!-- Who we are -->
 
@@ -115,7 +116,7 @@
         <Button
             android:id="@+id/conBtnQuit"
             android:background="@drawable/roundstyle"
-            android:backgroundTint="@color/light_grey"
+            android:backgroundTint="@color/muted_light_purple"
             android:textColor="@color/dark_grey"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -138,7 +139,7 @@
             android:elevation="10dp"
             android:layout_margin="10dp"
             android:background="@drawable/roundstyle"
-            android:backgroundTint="@color/light_purple"
+            android:backgroundTint="@color/dark_purple"
             android:text="@string/con_btn_give_consent"
             android:textSize="12sp" />
 
