--- a/app/src/main/res/layout/keyboard_data_card.xml
+++ b/app/src/main/res/layout/keyboard_data_card.xml
@@ -87,19 +87,18 @@
 
             <TextView
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginLeft="5dp"
+                android:maxWidth="30dp"
+                android:layout_height="match_parent"
                 android:text="@string/speed_avg"
-                android:textAlignment="textStart"
                 android:textColor="@color/light_grey"
                 android:textSize="18sp" />
 
             <TextView
-                android:layout_width="match_parent"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="@string/accuracy"
+                android:paddingEnd="10dp"
                 android:textAlignment="textEnd"
-                android:layout_marginHorizontal="30dp"
                 android:textColor="@color/light_grey"
                 android:textSize="18sp" />
         </TableRow>
@@ -107,14 +106,18 @@
         <TableRow
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:padding="3dp">
+            android:padding="3dp"
+            android:orientation="horizontal">
+
+            <TableRow
+                android:orientation="vertical"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent">
 
             <RelativeLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:layout_column="0"
-                android:paddingTop="10dp"
-                android:layout_weight="1">
+                android:paddingTop="10dp">
 
                 <ImageView
                     android:id="@+id/speedImage"
@@ -141,15 +144,17 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_below="@id/speedImage"
-                    android:layout_marginTop="15dp"
+                    android:layout_marginTop="5dp"
                     android:fontFamily="@font/roboto"
-                    android:text="You were faster than last week!"
+                    android:text="You were faster than the global average!"
                     android:textAlignment="center"
                     android:gravity="center"
                     android:lines="2"
                     android:textColor="@color/light_grey"
                     android:textSize="14sp" />
             </RelativeLayout>
+
+            </TableRow>
 
             <RelativeLayout
                 android:layout_height="match_parent"
