--- a/app/src/main/res/layout/sleep_data_card.xml
+++ b/app/src/main/res/layout/sleep_data_card.xml
@@ -68,7 +68,7 @@
             android:layout_height="match_parent"
             android:orientation="vertical"
             android:id="@+id/sleepDataNotFound"
-            android:visibility="gone">
+            android:visibility="visible">
 
             <TextView
                 android:layout_width="wrap_content"
@@ -88,7 +88,8 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical"
-        android:padding="3dp">
+        android:padding="3dp"
+        android:visibility="gone">
 
 
         <TableRow
