--- a/app/src/main/res/values/arrays.xml
+++ b/app/src/main/res/values/arrays.xml
@@ -15,12 +15,15 @@
         <item>Keyboard usage</item>
         <item>Sleep data</item>
         <item>Your wellbeing</item>
+        <item>Required settings</item>
     </string-array>
 
     <string-array name="onboarding_texts">
-        <item>You can easily view your daily keyboard usage, for example how fast you have been typing.</item>
+        <item>To participate in this study, all you have to do is use your mobile phone like you normally would and complete the daily questionnaires.</item>
+        <item>You can easily view your daily keyboard usage and sleep data to compare how you slept to your typing metrics.</item>
         <item>Sleep data is also available so you can compare your keyboard usage with how well you have slept.</item>
         <item>Access to all this information allows us to see whether your sleep quality affects your keyboard usage during the day.</item>
+        <item>Before you begin, remember to check your settings tab to see if the settings on your phone are optimized for the use of this app.</item>
     </string-array>
 
     <!-- Preferences -->
