--- a/app/src/main/res/layout/fragment_consent.xml
+++ b/app/src/main/res/layout/fragment_consent.xml
@@ -46,7 +46,7 @@
                 android:orientation="vertical" >
 
                 <LinearLayout
-                    android:layout_width="fill_parent"
+                    android:layout_width="match_parent"
                     android:layout_height="80sp"
                     android:orientation="horizontal"
                     android:weightSum="2" >
@@ -58,7 +58,7 @@
                         android:contentDescription="@string/con_portrait"
                         android:paddingTop="5sp"
                         android:scaleType="centerInside"
-                        android:src="@drawable/ic_baseline_arrow_forward_ios_24" />
+                        android:src="@drawable/sleep_screen" />
 
                     <ImageView
                         android:layout_width="fill_parent"
@@ -67,7 +67,7 @@
                         android:contentDescription="@string/con_portrait"
                         android:paddingTop="5sp"
                         android:scaleType="centerInside"
-                        android:src="@drawable/ic_baseline_arrow_forward_ios_24" />
+                        android:src="@drawable/wake_up_40" />
 
 
                 </LinearLayout>
