--- a/app/src/main/res/layout/fragment_onboarding_item.xml
+++ b/app/src/main/res/layout/fragment_onboarding_item.xml
@@ -31,7 +31,7 @@
             android:padding="10dp"
             android:fontFamily="@font/roboto_black"
             android:textAlignment="center"
-            android:textColor="@color/design_default_color_on_primary"
+            android:textColor="@color/dark_purple"
             android:textSize="24sp" />
 
         <TextView
@@ -43,7 +43,7 @@
             android:layout_marginBottom="5dp"
             android:justificationMode="inter_word"
             android:padding="10dp"
-            android:textColor="@color/white"
+            android:textColor="@color/light_purple"
             android:textSize="20sp" />
 
 
