--- a/app/src/main/res/layout/fragment_onboarding.xml
+++ b/app/src/main/res/layout/fragment_onboarding.xml
@@ -49,10 +49,11 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Skip"
+            android:elevation="10dp"
             android:textSize="20sp"
             android:background="@drawable/roundstyle"
-            android:backgroundTint="@color/transparent"
-            android:textColor="@color/light_grey"
+            android:backgroundTint="@color/light_grey"
+            android:textColor="@color/white"
             android:layout_marginRight="35dp"/>
 
         <ImageView
@@ -79,17 +80,25 @@
             android:layout_gravity="center"
             android:src="@drawable/comp_view_circle_gray" />
 
+        <ImageView
+            android:id="@+id/iv_fourth_circle"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:src="@drawable/comp_view_circle_gray" />
+
         <Button
             android:id="@+id/next"
             android:textSize="20sp"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Next"
-            android:paddingHorizontal="30dp"
+            android:elevation="10dp"
+            android:paddingHorizontal="25dp"
             android:background="@drawable/roundstyle"
             android:backgroundTint="@color/light_purple"
             android:textColor="@color/white"
-            android:layout_marginLeft="35dp"/>
+            android:layout_marginLeft="30dp"/>
 
     </LinearLayout>
 
