--- a/app/src/main/res/layout/fragment_user_info.xml
+++ b/app/src/main/res/layout/fragment_user_info.xml
@@ -72,7 +72,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="Your prolific ID is used to verify your identity after the study is concluded."
-        android:textColor="@color/light_purple"
+        android:textColor="@color/muted_purple"
         android:textSize="18sp"
         android:padding="20dp"
         android:textAlignment="center" />
