--- a/app/src/main/res/layout/dialog_daily_questionnaire.xml
+++ b/app/src/main/res/layout/dialog_daily_questionnaire.xml
@@ -38,56 +38,6 @@
             <RadioButton
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:id="@+id/likertScale1_1"
-                android:text="@string/likert_1"/>
-
-            <RadioButton
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:id="@+id/likertScale1_2"
-                android:text="@string/likert_2"/>
-
-            <RadioButton
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:id="@+id/likertScale1_3"
-                android:text="@string/likert_3"/>
-
-            <RadioButton
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:id="@+id/likertScale1_4"
-                android:text="@string/likert_4"/>
-
-            <RadioButton
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:id="@+id/likertScale1_5"
-                android:text="@string/likert_5"/>
-
-            <RadioButton
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="@string/likert_6"
-                android:id="@+id/likertScale1_6"/>
-
-            <RadioButton
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:id="@+id/likertScale1_7"
-                android:text="@string/likert_7"/>
-        </RadioGroup>
-
-        <RadioGroup
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:id="@+id/radioGroup2"
-            android:paddingVertical="8dp"
-            android:visibility="gone">
-
-            <RadioButton
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
                 android:id="@+id/likertScale1"
                 android:text="@string/likert_1"/>
 
@@ -128,6 +78,7 @@
                 android:text="@string/likert_7"/>
         </RadioGroup>
 
+
         <EditText
             android:id="@+id/amountOfWordsAnswer"
             android:layout_width="match_parent"
@@ -142,6 +93,14 @@
             android:minHeight="48dp"
             android:layout_marginVertical="10dp"
             />
+
+        <NumberPicker
+            android:id="@+id/number_picker"
+            android:layout_width="match_parent"
+            android:layout_height="180dp"
+            android:layout_margin="10dp"
+            android:padding="10dp"
+            android:visibility="gone"/>
 
 
         <Button
