--- a/app/src/main/res/layout/fragment_chart.xml
+++ b/app/src/main/res/layout/fragment_chart.xml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".ui.menu.ChartFragment"
@@ -46,36 +45,20 @@
                     android:gravity="center">
 
                     <TextView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:paddingHorizontal="5dp"
                         android:text="Errors"
                         android:id="@+id/switchToErrorsBtn"
-                        android:background="@drawable/border_selected"
-                        android:textColor="@color/dark_purple"
                         android:layout_marginHorizontal="5dp"
-                        android:gravity="center"
-                        android:textAlignment="center"
-                        android:textSize="16sp"
-                        android:fontFamily="@font/roboto_black">
+                        style="@style/switchChartChosen">
 
                     </TextView>
 
 
 
                 <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:paddingHorizontal="5dp"
-                    android:textAlignment="center"
-                    android:fontFamily="@font/roboto_bold"
-                    android:text="Writing speed"
+                    android:text="Words per minute"
                     android:id="@+id/switchToWritingSpeedBtn"
-                    android:background="@drawable/border_unselected"
-                    android:textColor="@color/muted_light_purple"
                     android:layout_marginHorizontal="5dp"
-                    android:layout_gravity="center"
-                    android:textSize="16sp">
+                    style="@style/switchChartNotChosen">
 
                 </TextView>
                 </LinearLayout>
@@ -83,6 +66,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="Errors"
+                    android:id="@+id/switchChartTitle"
                     android:textSize="15sp"
                     android:layout_gravity="left"
                     android:paddingVertical="15dp"
@@ -128,6 +112,37 @@
                 android:layout_height="match_parent"
                 android:padding="2dp"
                 android:id="@+id/barChart2"/>
+
+                </LinearLayout>
+
+            </androidx.cardview.widget.CardView>
+
+            <androidx.cardview.widget.CardView
+                android:layout_width="match_parent"
+                android:layout_height="250dp">
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:orientation="vertical"
+                    android:paddingVertical="10dp"
+                    android:backgroundTint="@color/white">
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="This week's sleep quality"
+                        android:textSize="15sp"
+                        android:fontFamily="@font/roboto_black"
+                        android:layout_gravity="left"
+                        android:padding="10dp"
+                        android:textColor="@color/dark_purple" />
+
+                    <com.github.mikephil.charting.charts.BarChart
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:padding="2dp"
+                        android:id="@+id/StackedBarChart"/>
 
                 </LinearLayout>
 
