--- a/app/src/main/res/layout/fragment_consent.xml
+++ b/app/src/main/res/layout/fragment_consent.xml
@@ -55,7 +55,6 @@
                         android:layout_width="fill_parent"
                         android:layout_height="80sp"
                         android:layout_weight="1"
-                        android:contentDescription="@string/con_portrait"
                         android:paddingTop="5sp"
                         android:scaleType="centerInside"
                         android:src="@drawable/sleep_screen" />
@@ -64,10 +63,9 @@
                         android:layout_width="fill_parent"
                         android:layout_height="80sp"
                         android:layout_weight="1"
-                        android:contentDescription="@string/con_portrait"
                         android:paddingTop="5sp"
                         android:scaleType="centerInside"
-                        android:src="@drawable/wake_up_40" />
+                        android:src="@drawable/time_management" />
 
 
                 </LinearLayout>
