--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -6,6 +6,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context=".ui.menu.HomeFragment"
     android:id="@+id/homeFragment"
+    android:paddingVertical="10dp"
     android:background="@color/white">
 
     <LinearLayout
