--- a/app/src/main/res/layout/fragment_onboarding.xml
+++ b/app/src/main/res/layout/fragment_onboarding.xml
@@ -13,18 +13,19 @@
         android:id="@+id/fl_slider"
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_marginTop="56dp"
-        android:layout_marginBottom="200dp"
         android:layout_marginHorizontal="30dp"
+        android:layout_marginTop="56dp"
+        android:layout_marginBottom="100dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent">
+        app:layout_constraintTop_toTopOf="parent">
 
-        <include layout="@layout/fragment_onboarding_item"
+        <include
             android:id="@+id/content"
-            android:layout_height="match_parent"
+            layout="@layout/fragment_onboarding_item"
             android:layout_width="match_parent"
-            />
+            android:layout_height="match_parent" />
 
         <androidx.viewpager2.widget.ViewPager2
             android:id="@+id/vp2_pager"
@@ -90,14 +91,10 @@
         <Button
             android:id="@+id/next"
             android:textSize="20sp"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            style="@style/btn"
             android:text="Next"
             android:elevation="10dp"
             android:paddingHorizontal="25dp"
-            android:background="@drawable/roundstyle"
-            android:backgroundTint="@color/light_purple"
-            android:textColor="@color/white"
             android:layout_marginLeft="30dp"/>
 
     </LinearLayout>
