--- a/app/src/main/res/layout/fragment_stacked_bar_chart.xml
+++ b/app/src/main/res/layout/fragment_stacked_bar_chart.xml
@@ -4,9 +4,28 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content">
 
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="vertical"
+        android:padding="5dp">
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Last week's sleep quality"
+        android:textSize="15sp"
+        android:layout_gravity="left"
+        android:paddingVertical="15dp"
+        android:paddingHorizontal="10dp"
+        android:fontFamily="@font/roboto_black"
+        android:textColor="@color/dark_purple" />
+
     <com.github.mikephil.charting.charts.BarChart
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:id="@+id/StackedBarChart"/>
+    </LinearLayout>
+
 
 </FrameLayout>
