--- a/app/src/main/res/layout/fragment_user_info.xml
+++ b/app/src/main/res/layout/fragment_user_info.xml
@@ -44,6 +44,7 @@
         android:layout_gravity="center"
         android:inputType="textEmailAddress"
         android:minHeight="48dp"
+        android:visibility="gone"
         android:padding="8dp" />
 
     <TextView
@@ -53,6 +54,7 @@
         android:text="@string/email_prompt"
         android:textColor="@color/muted_purple"
         android:textSize="18sp"
+        android:visibility="gone"
         android:padding="30dp"
         android:textAlignment="center" />
 
