--- a/app/src/main/res/drawable/oval_marker.xml
+++ b/app/src/main/res/drawable/oval_marker.xml
@@ -1,10 +1,10 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
-    <solid android:color="@color/white" />
+    <solid android:color="@color/transparent" />
 
     <stroke
         android:width="1dp"
-        android:color="@color/dark_grey" />
+        android:color="@color/light_purple" />
 
     <padding
         android:bottom="1dp"
