--- a/app/src/main/res/layout/marker_view.xml
+++ b/app/src/main/res/layout/marker_view.xml
@@ -15,7 +15,7 @@
         android:gravity="center"
         android:layout_marginLeft="5dp"
         android:layout_marginRight="5dp"
-        android:text=""
+        android:text="1"
         android:textSize="8sp"
         android:textColor="@color/dark_purple"
         android:ellipsize="end"
