Fetching sleep data to charts as range instead of individually. Updates to checking the week for daily questionaire.

--- a/app/src/main/res/layout/keyboard_data_card.xml
+++ b/app/src/main/res/layout/keyboard_data_card.xml
@@ -137,7 +137,7 @@
                     android:layout_toRightOf="@id/speedImage"
                     android:layout_alignBottom="@id/speedImage"
                     android:gravity="center"
-                    android:text="1.2s"
+                    android:text="-"
                     android:layout_marginVertical="10dp"
                     android:textColor="@color/white"
                     android:textSize="24sp"
@@ -188,7 +188,7 @@
                     android:id="@+id/ProgressTextView"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
-                    android:text="70%"
+                    android:text="-"
                     android:textColor="@color/white"
                     android:textSize="24sp"
                     android:gravity="center"
