--- a/app/src/main/res/layout/dialog_daily_questionnaire.xml
+++ b/app/src/main/res/layout/dialog_daily_questionnaire.xml
@@ -10,9 +10,10 @@
         android:layout_margin="16dp">
 
         <TextView
+            android:id="@+id/questionnaireTitle"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Daily questionnaire"
+            android:text="@string/questionnaire_title_daily"
             android:textSize="20sp"
             android:fontFamily="@font/roboto_black"
             android:textColor="@color/muted_purple"
@@ -132,19 +133,36 @@
             android:id="@+id/explainAnswer"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginHorizontal="50dp"
+            android:layout_marginHorizontal="30dp"
             android:background="@drawable/roundstyle"
-            android:textSize="14dp"
+            android:textSize="12dp"
             android:padding="5dp"
             android:visibility="visible"
             android:layout_gravity="center_horizontal"
-            android:hint="If yes, explain what?"
+            android:hint="If yes, please explain here."
             android:layout_marginVertical="10dp"
             android:inputType="textCapSentences|textMultiLine"
             android:maxLength="2000"
             android:maxLines="4"
             />
         </LinearLayout>
+
+        <EditText
+            android:id="@+id/openAnswer"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginHorizontal="30dp"
+            android:background="@drawable/roundstyle"
+            android:textSize="12dp"
+            android:padding="5dp"
+            android:visibility="gone"
+            android:layout_gravity="center_horizontal"
+            android:hint="If yes, explain what?"
+            android:layout_marginVertical="10dp"
+            android:inputType="textCapSentences|textMultiLine"
+            android:maxLength="3000"
+            android:maxLines="6"
+            />
 
 
         <Button
