--- a/app/src/main/res/layout/fragment_date.xml
+++ b/app/src/main/res/layout/fragment_date.xml
@@ -25,7 +25,8 @@
             android:layout_centerVertical="true"
             android:backgroundTint="@color/white"
             android:paddingHorizontal="10dp"
-            android:layout_marginHorizontal="30dp"
+            android:layout_marginEnd="40dp"
+            android:layout_marginStart="20dp"
             app:tint="@color/light_purple"
             android:minWidth="48dp"
             android:minHeight="48dp"
