Small updates on Firebase operations, user authentication and fetching sleep data to charts.

--- a/app/src/main/res/xml/root_preferences.xml
+++ b/app/src/main/res/xml/root_preferences.xml
@@ -8,6 +8,7 @@
             app:title="@string/keyboard_data_to_show"
             app:entryValues="@array/pref_keyboard_values"
             app:entries="@array/pref_choose_keyboard_stats"
+            app:isPreferenceVisible="false"
             />
 
         <SwitchPreferenceCompat
@@ -17,7 +18,8 @@
 
     </PreferenceCategory>
 
-    <PreferenceCategory app:title="@string/notifications_header">
+    <PreferenceCategory app:title="@string/notifications_header"
+        app:isPreferenceVisible="false">
 
         <SwitchPreferenceCompat
             app:key="@string/notifications_key"
