--- a/app/src/main/res/layout/keyboard_data_card.xml
+++ b/app/src/main/res/layout/keyboard_data_card.xml
@@ -3,7 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="250dp"
+    android:layout_height="260dp"
     app:cardCornerRadius="30dp"
     app:cardPreventCornerOverlap="true"
     app:cardElevation="2dp"
@@ -18,7 +18,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical"
-        android:padding="20dp">
+        android:padding="15dp">
 
         <TextView
             android:id="@+id/textView5"
@@ -28,13 +28,13 @@
             android:padding="10dp"
             android:text="Typing stats"
             android:textColor="@color/white"
-            android:textSize="20sp" />
+            android:textSize="18sp" />
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:orientation="vertical"
-            android:visibility="gone"
+            android:visibility="visible "
             android:id="@+id/keyboardDataNotFound">
 
             <TextView
@@ -43,9 +43,22 @@
                 android:text="@string/home_keyboard_data_not_found_title"
                 android:textColor="@color/light_grey"
                 android:fontFamily="@font/roboto_black"
-                android:gravity="center"
+                android:layout_gravity="center"
+                android:textSize="16sp"
                 android:textAlignment="center"
                 android:paddingVertical="8dp" />
+
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="@string/home_keyboard_data_not_found_wait_for_update"
+                android:textColor="@color/light_grey"
+                android:fontFamily="@font/roboto"
+                android:gravity="center"
+                android:textSize="12sp"
+                android:id="@+id/waitForDataToUpdate"
+                android:textAlignment="center"
+                android:paddingVertical="10dp" />
 
             <TextView
                 android:layout_width="match_parent"
@@ -54,8 +67,11 @@
                 android:textColor="@color/light_grey"
                 android:fontFamily="@font/roboto"
                 android:gravity="center"
+                android:visibility="gone"
+                android:textSize="12sp"
+                android:id="@+id/checkAccessibilitySettingsPrompt"
                 android:textAlignment="center"
-                android:paddingVertical="10dp" />
+                android:paddingVertical="5dp" />
 
             <Button
                 android:layout_width="wrap_content"
@@ -65,6 +81,7 @@
                 android:background="@drawable/roundstyle"
                 android:text="@string/home_keyboard_data_not_found_btn"
                 android:layout_gravity="center"
+                android:textSize="12dp"
                 android:padding="5dp"
                 android:id="@+id/openAccessibilitySettingsBtn"/>
 
@@ -77,7 +94,7 @@
         android:layout_height="match_parent"
         android:orientation="vertical"
         android:id="@+id/dataAvailable"
-        android:visibility="visible">
+        android:visibility="gone">
 
         <TableRow
             android:layout_width="match_parent"
@@ -148,7 +165,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_below="@id/speedImage"
-                    android:layout_marginTop="8dp"
+                    android:layout_marginTop="10dp"
                     android:fontFamily="@font/roboto"
                     android:text="You were faster than on  \naverage!"
                     android:textAlignment="center"
