--- a/app/src/main/res/layout/sleep_data_card.xml
+++ b/app/src/main/res/layout/sleep_data_card.xml
@@ -9,7 +9,7 @@
     app:cardElevation="2dp"
     android:clipChildren="false"
     android:layout_margin="5dp"
-    android:clipToPadding="false"
+    android:clipToPadding="true"
     app:cardUseCompatPadding="true"
     app:cardBackgroundColor="@color/light_purple">
 
@@ -18,7 +18,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical"
-        android:padding="20dp">
+        android:padding="15dp">
 
         <TextView
             android:layout_width="match_parent"
@@ -27,7 +27,7 @@
             android:padding="10dp"
             android:text="@string/sleep_data_title"
             android:textColor="@color/white"
-            android:textSize="20sp"
+            android:textSize="18sp"
             android:id="@+id/hideThis"/>
 
         <LinearLayout
@@ -71,7 +71,7 @@
                 android:padding="20dp"
                 android:text="@string/home_sleep_data_not_found_content"
                 android:textAlignment="center"
-                android:textSize="20sp"
+                android:textSize="16sp"
                 android:gravity="center" />
 
         </LinearLayout>
@@ -100,7 +100,7 @@
                 android:layout_column="0"
                 android:textAlignment="center"
                 android:textColor="@color/light_grey"
-                android:textSize="18sp" />
+                android:textSize="16sp" />
 
             <TextView
                 android:layout_width="match_parent"
@@ -110,7 +110,7 @@
                 android:text="Time asleep"
                 android:textAlignment="center"
                 android:textColor="@color/light_grey"
-                android:textSize="18sp"
+                android:textSize="16sp"
                 android:fontFamily="@font/roboto"/>
         </TableRow>
 
@@ -146,7 +146,7 @@
                     android:padding="5dp"
                     android:text="9.00"
                     android:textColor="@color/white"
-                    android:textSize="20sp"
+                    android:textSize="18sp"
                     android:layout_alignBottom="@id/wakeUpImage"
                     android:layout_toRightOf="@id/wakeUpImage"
                     android:layout_weight="1"
@@ -160,7 +160,7 @@
                     android:text="Bedtime"
                     android:fontFamily="@font/roboto"
                     android:textColor="@color/light_grey"
-                    android:textSize="18sp"
+                    android:textSize="16sp"
                     android:textAlignment="center"
                     android:layout_below="@id/wakeUpImage"
                     />
@@ -183,7 +183,7 @@
                     android:text="23.00"
                     android:layout_marginVertical="5dp"
                     android:textColor="@color/white"
-                    android:textSize="20sp"
+                    android:textSize="18sp"
                     android:textAlignment="center"
                     android:fontFamily="@font/roboto"
                     android:layout_gravity="center_vertical"
@@ -206,7 +206,7 @@
                 android:layout_height="wrap_content"
                 android:layout_gravity="center_horizontal"
                 android:layout_marginVertical="10dp"
-                android:padding="10dp"
+                android:padding="8dp"
                 android:src="@drawable/sleep_64" />
 
             <TextView
@@ -219,7 +219,7 @@
                 android:textAlignment="center"
                 android:gravity="center_horizontal"
                 android:textColor="@color/white"
-                android:textSize="26sp" />
+                android:textSize="20sp" />
 
 
         </RelativeLayout>
