--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -7,7 +7,8 @@
         <item name="android:background">@drawable/roundstyle</item>
         <item name="android:layout_width">wrap_content</item>
         <item name="android:layout_height">wrap_content</item>
-        <item name="android:padding">5dp</item>
+        <item name="android:padding">3dp</item>
+        <item name="android:textSize">12dp</item>
     </style>
 
     <!-- Chart switch styles -->
